src/forms/new/ct/examples/valid/nonnumeric-numbering-offset.ct
180	dG = -63.65 [Initially -66.90] zxcv
1	a	0	2	0	q
2	u	1	3	61	2
3	g	2	4	60	3
4	u	3	5	59	4
5	c	4	6	58	5
6	g	5	7	57	6
7	a	6	8	56	7
8	u	7	9	0	8
9	a	8	10	0	9
10	c	9	11	0	10
11	u	10	12	0	11
12	a	11	13	0	12
13	a	12	14	0	13
14	c	13	15	0	14
15	a	14	16	55	15
16	u	15	17	54	16
17	g	16	18	53	17
18	g	17	19	52	18
19	u	18	20	51	19
20	u	19	21	50	20
21	u	20	22	49	21
22	a	21	23	48	22
23	u	22	24	47	23
24	g	23	25	46	24
25	c	24	26	45	25
26	u	25	27	44	26
27	u	26	28	43	27
28	a	27	29	42	28
29	g	28	30	41	29
30	u	29	31	40	30
31	g	30	32	39	31
32	a	31	33	0	32
33	g	32	34	0	33
34	c	33	35	0	34
35	u	34	36	0	35
36	u	35	37	0	36
37	g	36	38	0	37
38	g	37	39	0	38
39	c	38	40	31	39
40	a	39	41	30	40
41	u	40	42	29	41
42	u	41	43	28	42
43	a	42	44	27	43
44	a	43	45	26	44
45	g	44	46	25	45
46	c	45	47	24	46
47	a	46	48	23	47
48	u	47	49	22	48
49	g	48	50	21	49
50	a	49	51	20	50
51	a	50	52	19	51
52	u	51	53	18	52
53	u	52	54	17	53
54	a	53	55	16	54
55	u	54	56	15	55
56	u	55	57	7	56
57	c	56	58	6	57
58	g	57	59	5	58
59	a	58	60	4	59
60	c	59	61	3	60
61	a	60	62	2	61
62	a	61	63	0	62
63	u	62	64	0	63
64	g	63	65	0	64
65	g	64	66	0	65
66	u	65	67	0	66
67	g	66	68	173	67
68	a	67	69	172	68
69	c	68	70	171	69
70	g	69	71	170	70
71	a	70	72	0	71
72	c	71	73	0	72
73	u	72	74	0	73
74	g	73	75	91	74
75	c	74	76	90	75
76	u	75	77	89	76
77	u	76	78	88	77
78	g	77	79	87	78
79	u	78	80	86	79
80	u	79	81	0	80
81	c	80	82	0	81
82	a	81	83	0	82
83	u	82	84	0	83
84	u	83	85	0	84
85	u	84	86	0	85
86	g	85	87	79	86
87	c	86	88	78	87
88	g	87	89	77	88
89	a	88	90	76	89
90	g	89	91	75	90
91	u	90	92	74	91
92	c	91	93	0	92
93	a	92	94	0	93
94	a	93	95	0	94
95	a	94	96	0	95
96	a	95	97	0	96
97	g	96	98	168	97
98	a	97	99	167	98
99	c	98	100	166	99
100	g	99	101	165	100
101	u	100	102	164	101
102	c	101	103	163	102
103	c	102	104	0	103
104	c	103	105	160	104
105	c	104	106	159	105
106	a	105	107	158	106
107	g	106	108	157	107
108	c	107	109	156	108
109	c	108	110	155	109
110	c	109	111	0	110
111	c	110	112	0	111
112	g	111	113	0	112
113	a	112	114	0	113
114	g	113	115	0	114
115	g	114	116	0	115
116	u	115	117	154	116
117	g	116	118	153	117
118	a	117	119	152	118
119	u	118	120	151	119
120	c	119	121	150	120
121	a	120	122	149	121
122	c	121	123	148	122
123	g	122	124	147	123
124	a	123	125	146	124
125	a	124	126	145	125
126	c	125	127	144	126
127	u	126	128	143	127
128	g	127	129	139	128
129	g	128	130	138	129
130	u	129	131	137	130
131	u	130	132	136	131
132	u	131	133	0	132
133	u	132	134	0	133
134	c	133	135	0	134
135	g	134	136	0	135
136	g	135	137	131	136
137	a	136	138	130	137
138	c	137	139	129	138
139	u	138	140	128	139
140	u	139	141	0	140
141	u	140	142	0	141
142	g	141	143	0	142
143	g	142	144	127	143
144	g	143	145	126	144
145	u	144	146	125	145
146	u	145	147	124	146
147	u	146	148	123	147
148	g	147	149	122	148
149	u	148	150	121	149
150	g	149	151	120	150
151	g	150	152	119	151
152	u	151	153	118	152
153	c	152	154	117	153
154	a	153	155	116	154
155	g	154	156	109	155
156	g	155	157	108	156
157	u	156	158	107	157
158	u	157	159	106	158
159	g	158	160	105	159
160	g	159	161	104	160
161	a	160	162	0	161
162	a	161	163	0	162
163	g	162	164	102	163
164	g	163	165	101	164
165	c	164	166	100	165
166	g	165	167	99	166
167	u	166	168	98	167
168	c	167	169	97	168
169	a	168	170	0	169
170	c	169	171	70	170
171	g	170	172	69	171
172	u	171	173	68	172
173	c	172	174	67	173
174	c	173	175	0	174
175	g	174	176	0	175
176	u	175	177	0	176
177	g	176	178	0	177
178	u	177	179	0	178
179	u	178	180	0	179
180	u	179	0	0	180
