src/forms/new/ct/examples/invalid/negative-sequence-length.ct
-121	dG = -38.20 [Initially -39.80] CYVaV-Delta
1	c	0	2	0	1
2	g	1	3	0	2
3	a	2	4	0	3
4	c	3	5	0	4
5	a	4	6	0	5
6	c	5	7	0	6
7	c	6	8	0	7
8	u	7	9	0	8
9	u	8	10	0	9
10	g	9	11	103	10
11	g	10	12	102	11
12	u	11	13	101	12
13	g	12	14	100	13
14	g	13	15	99	14
15	a	14	16	0	15
16	c	15	17	0	16
17	g	16	18	74	17
18	a	17	19	73	18
19	u	18	20	72	19
20	u	19	21	0	20
21	g	20	22	69	21
22	g	21	23	68	22
23	u	22	24	67	23
24	g	23	25	66	24
25	u	24	26	0	25
26	a	25	27	0	26
27	c	26	28	63	27
28	a	27	29	62	28
29	g	28	30	61	29
30	g	29	31	58	30
31	a	30	32	57	31
32	c	31	33	56	32
33	u	32	34	55	33
34	u	33	35	54	34
35	c	34	36	53	35
36	c	35	37	52	36
37	u	36	38	0	37
38	a	37	39	0	38
39	a	38	40	0	39
40	c	39	41	0	40
41	c	40	42	0	41
42	c	41	43	0	42
43	u	42	44	0	43
44	g	43	45	0	44
45	a	44	46	0	45
46	u	45	47	0	46
47	a	46	48	0	47
48	u	47	49	0	48
49	a	48	50	0	49
50	g	49	51	0	50
51	u	50	52	0	51
52	g	51	53	36	52
53	g	52	54	35	53
54	a	53	55	34	54
55	a	54	56	33	55
56	g	55	57	32	56
57	u	56	58	31	57
58	u	57	59	30	58
59	g	58	60	0	59
60	g	59	61	0	60
61	u	60	62	29	61
62	u	61	63	28	62
63	g	62	64	27	63
64	g	63	65	0	64
65	g	64	66	0	65
66	c	65	67	24	66
67	a	66	68	23	67
68	c	67	69	22	68
69	u	68	70	21	69
70	c	69	71	0	70
71	c	70	72	0	71
72	g	71	73	19	72
73	u	72	74	18	73
74	c	73	75	17	74
75	u	74	76	0	75
76	g	75	77	98	76
77	a	76	78	97	77
78	g	77	79	96	78
79	g	78	80	95	79
80	g	79	81	92	80
81	a	80	82	91	81
82	c	81	83	90	82
83	c	82	84	89	83
84	g	83	85	88	84
85	u	84	86	0	85
86	u	85	87	0	86
87	u	86	88	0	87
88	c	87	89	84	88
89	g	88	90	83	89
90	g	89	91	82	90
91	u	90	92	81	91
92	c	91	93	80	92
93	u	92	94	0	93
94	u	93	95	0	94
95	c	94	96	79	95
96	c	95	97	78	96
97	u	96	98	77	97
98	c	97	99	76	98
99	c	98	100	14	99
100	c	99	101	13	100
101	g	100	102	12	101
102	c	101	103	11	102
103	c	102	104	10	103
104	u	103	105	0	104
105	c	104	106	0	105
106	u	105	107	0	106
107	g	106	108	121	107
108	a	107	109	120	108
109	g	108	110	119	109
110	c	109	111	118	110
111	c	110	112	117	111
112	u	111	113	0	112
113	a	112	114	0	113
114	c	113	115	0	114
115	u	114	116	0	115
116	a	115	117	0	116
117	g	116	118	111	117
118	g	117	119	110	118
119	c	118	120	109	119
120	u	119	121	108	120
121	u	120	0	107	121
